[gd_scene load_steps=19 format=2]

[ext_resource path="res://GameOffCharacter.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 5 )

[sub_resource type="Animation" id=3]
resource_name = "CrouchIdle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=4]
resource_name = "CrouchWalk"
length = 1.05
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]
resource_name = "DieShader"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.729412, 0.729412, 0.729412, 0 ), Color( 0.192157, 0.192157, 0.192157, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "HurtDead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}

[sub_resource type="Animation" id=7]
resource_name = "HurtDown"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=8]
resource_name = "HurtMid"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}

[sub_resource type="Animation" id=9]
resource_name = "HurtUp"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=11]
length = 100.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 12 ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=14]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=15]
resource_name = "PlayerDead"
length = 200.0
tracks/0/type = "value"
tracks/0/path = NodePath("../ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.227451, 0.286275, 0.34902, 0 ), Color( 0.12549, 0.203922, 0.341176, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
modulate = Color( 1, 1, 1, 0.313726 )
z_index = 3
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -320.0
margin_top = -192.0
margin_right = 320.0
margin_bottom = 192.0
color = Color( 0.227451, 0.286275, 0.34902, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -4, -10 )
enabled = true
cast_to = Vector2( 0, -12 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 4, -10 )
enabled = true
cast_to = Vector2( 0, -12 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 16 )
position = Vector2( -1, -23 )
z_index = 1
texture = ExtResource( 1 )
hframes = 3
vframes = 11
frame = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
z_index = 5
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
z_index = 5
shape = SubResource( 2 )

[node name="BufferTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CrouchIdle = SubResource( 3 )
anims/CrouchWalk = SubResource( 4 )
anims/DieShader = SubResource( 5 )
anims/HurtDead = SubResource( 6 )
anims/HurtDown = SubResource( 7 )
anims/HurtMid = SubResource( 8 )
anims/HurtUp = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/JumpDown = SubResource( 11 )
anims/JumpMid = SubResource( 12 )
anims/JumpUp = SubResource( 13 )
anims/Run = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationPlayer"]
anims/PlayerDead = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 8.0

[connection signal="timeout" from="BufferTimer" to="." method="bufferTimer"]
[connection signal="timeout" from="CoyoteTimer" to="." method="coyoteTimer"]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
